adding credit to about me page

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -14,11 +14,14 @@
         <div class="col">
             <h1>{{ name }}</h1>
             <img src="/static/ash_ketchum.jpg" class="img-fluid" />
+
+            <p>Illustration by <a href="https://www.deviantart.com/kevinbolk/art/Pokemon-The-Trainer-With-No-Name-487202713">Kevin Bolk</a>.</p>
         </div>
 
         <div class="col-sm-8">
             <h2>My pokemon: {{ pokemon }}</h2>
         </div>
+
       </div>
 
     </div>
